# volly

./: .gitignore  AGENT.md  LICENSE  PROMPT.md  README.md  fix_plan.md  pyproject.toml  ralph.sh  scratch.sh
scripts/: chain_dump.py  image_strip.py
specs/: 00-overview.md  01-stack.md  02-loop.md  03-gemini-client.md  04-actor.md  05-renderer.md  06-judge.md  07-rewriter.md  08-state.md  09-control.md  10-ui.md
tests/: smoke_test.py
volly/: __init__.py  actor.py  actor_test.py  gemini_client.py  gemini_client_test.py  judge.py  judge_test.py  loop.py  loop_test.py  renderer.py  renderer_test.py  rewriter.py  rewriter_test.py  state.py  state_test.py
volly/ui/: __init__.py  app.py  app_test.py
